# onionpp

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST.in  README.md  build-python-package.sh  build-torpp-docker-image.sh  build-torpp.sh  build.sh  cross-build-all.sh  dependencies.sh  main.cpp  onionpp.h  pyproject.toml  python_binding.cpp  requirements.txt  setup.cfg  setup.py  test.py  test_load_so.cpp
.github/workflows/: cmake.yml  linux.yml  windows-i686.yml  windows-x64.yml  windows.yml
bindings/: python.cpp
cmake/: AddCLI11.cmake  AddLibEvent.cmake  AddOpenSSL.cmake  AddPyBind11.cmake  AddPython.cmake  AddTor.cmake  AddZLib.cmake  Build.cmake  BuildExample.cmake  BuildLibrary.cmake  CPM.cmake  FindLibEvent.cmake  FindZSTD.cmake  SetToolchain.cmake  SetVariables.cmake  Tests.cmake  Variables.cmake
cmake/dependencies/: LibEvent.cmake  OpenSSL.cmake  Tor.cmake
cmake/toolchain/: linux.cmake  windows.cmake
include/: onionpp.cpp  onionpp.h
include/onionpp/: onionpp.cpp  onionpp.h
include/onionpp/Configuration/: Configuration.cpp  Configuration.h  IConfiguration.h
include/onionpp/Option/: Option.h  OptionMapping.h
include/onionpp/Tor/: ITor.h  Tor.cpp  Tor.h
script/: cross-build-all.sh  dependencies.sh
src/onionpp/: onionpp.cpp
src/onionpp/Configuration/: Configuration.cpp
src/onionpp/Tor/: Tor.cpp
test/: test.cpp  test.py  test_load_so.cpp
