[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
description = embed tor into your application
author = Pascal Eberlein
author_email = pascal@eberlein.io
url = https://github.com/nbdy/onionpp
license = MIT

classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Topic :: Software Development :: Libraries :: Python Modules

keywords =
    embed
    tor

project_urls =
    Gitbub = https://github.com/nbdy/onionpp

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True


[flake8]
max-line-length = 120
show_source = True
exclude = .git, __pycache__, build, dist, docs, tools, venv
extend-ignore = E203, E722, B950
select = C,E,F,N,W,B,B9
